sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:5: error: not found: value auMoinsUnEchange
  while(ecart > 1 || auMoinsUnEchange == 1)
                     ^