sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var nbValeurs = getNombreValeurs()
  var ecart = nbValeurs
  while(ecart > 1 || auMoinsUnEchange == 1)
  {
    var auMoinsUnEchange = 0
    if(ecart>1)
    	ecart = (ecart.toDouble / 1.3).toInt
    var i = 0
    while (i+ecart < nbValeurs)
    {
      if (plusPetit(i, i+ecart))
      {
        echange(i, i+ecart)
        auMoinsUnEchange = 1
      }
      i += 1
    }
  }
}